--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-calendars": "^1.1306.0",
